unpackaged/main/default/objects/MSA_Implementation_Bracket_Price__c/MSA_Implementation_Bracket_Price__c.object-meta.xml
<CustomObject>
    <label>MSA Implementation Bracket Price</label>
    <nameField>
        <displayFormat>IP-{00000}</displayFormat>
        <label>MSA Implementation Bracket Price Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MSA Implementation Bracket Prices</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>