unpackaged/main/default/objects/MSA_Implementation_Bracket_Price__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Create_MSA_Implementation_Bracket_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>