unpackaged/main/default/objects/MSA_Implementation_Bracket_Price__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>