unpackaged/main/default/objects/MSA_Implementation_Bracket_Price__c/fields/Fixed_Price__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Price__c</fullName>
    <label>Fixed Price</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>