unpackaged/main/default/objects/MSA_Implementation_Bracket_Price__c/fields/Lower_Bound__c.field-meta.xml
<CustomField>
    <fullName>Lower_Bound__c</fullName>
    <label>Lower Bound (in MW)</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>