unpackaged/main/default/objects/MSA_Implementation_Bracket_Price__c/fields/MSA_Contract__c.field-meta.xml
<CustomField>
    <fullName>MSA_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MSA Contract</label>
    <referenceTo>MSA_Contract__c</referenceTo>
    <relationshipLabel>MSA Implementation Bracket Prices</relationshipLabel>
    <relationshipName>MSA_Implementation_Bracket_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>