unpackaged/main/default/objects/MSA_Implementation_Bracket_Price__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>MSA Implementation Bracket Prices</relationshipLabel>
    <relationshipName>MSA_Implementation_Bracket_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>