unpackaged/main/default/objects/MSA_Implementation_Bracket_Price__c/fields/Upper_Bound__c.field-meta.xml
<CustomField>
    <fullName>Upper_Bound__c</fullName>
    <label>Upper Bound</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>