unpackaged/main/default/objects/MSA_Implementation_Bracket_Price__c/validationRules/MSA_Imp_Currency_must_match_Acc_Currency.validationRule-meta.xml
<ValidationRule>
    <fullName>MSA_Imp_Currency_must_match_Acc_Currency</fullName>
    <active>true</active>
    <description>MSA Implementation Bracket Prices record Currency must match with related Account&#39;s currency</description>
    <errorConditionFormula>AND(
IF((TEXT(CurrencyIsoCode)!=TEXT(Account__r.CurrencyIsoCode)), True, False),
 NOT(ISBLANK(Account__c)) 
)</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>Currency must match with Account&#39;s Currency</errorMessage>
</ValidationRule>