unpackaged/main/default/objects/MSA_Implementation_Bracket_Price__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Pricing_Tier__c</columns>
    <columns>Lower_Bound__c</columns>
    <columns>Upper_Bound__c</columns>
    <columns>Fixed_Price__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Asset_Class__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>